--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 .apocalypse-gallery, .apocalypse-gallery *{
 box-sizing:border-box;
 margin:0;
@@ -17,7 +16,7 @@ position: absolute;
 display:block;
 top: 0;
 }
-.apocalypse-gallery > tbody > .moving{
+.apocalypse-gallery > tbody tr{
 display:inline-block;
 width: 300px;
 height:150px;
